[project]
name = "fast-cksum"
version = "0.1.0"
requires-python = ">=3.9"
dependencies = ["cffi>=1.17.1", "contexttimer>=0.3.3"]
description = "A fast, drop-in replacement for the GNU cksum utility. Also contains C and Python bindings."
authors = [
    { name = 'Lehman Garrison', email = 'lgarrison@flatironinstitute.org' },
]
license = "GPL-3.0-or-later"
readme = "README.md"

[dependency-groups]
dev = ["pre-commit"]

[build-system]
build-backend = 'mesonpy'
requires = ['meson-python']

[tool.meson-python.args]
setup = ['-Dcli=false', '-Dpy=true']

[tool.ruff.format]
quote-style = "single"

[project.scripts]
cksum-merge = "fast_cksum.cksum_merge:main"
